Commons (C) Black Rook Software, All rights reserved.

Slated for 2.31.0
=================

- Added: Matrix4X chaining commands and other commands.


Changed in 2.30.2
=================

- Fixed: Vector angle calls now sanitize angle ranges, according to spec.

Changed in 2.30.1
=================

- Added: Some additional string functions to Common.
- Fixed: RMath.getAngularDistanceRadians/Degrees() should have really called 
  getRelativeAngleDegrees/Radians() with an abs() added to them.

Changed in 2.30.0
=================

- MAJOR: Deprecated packages, classes, and methods PURGED.
- Fixed: Some classes used Common.getLocal(Class) a lot, hindering performance 
  significantly.


Changed in 2.21.0
=================

NOTE: Next version will be removing deprecated packages, classes, and methods!

- Changed: Major javadoc fixes.
- Updated: Copyright clauses for 2016.

- Deprecated: The entire com.blackrook.commons.spatialhash package in favor of
  a Model-View approach, in com.blackrook.commons.index.
- Deprecated: Grid, AbstractGrid, and com.blackrook.commons.grid.
- Deprecated: com.blackrook.commons.bank and com.blackrook.commons.search.

- Added: com.blackrook.commons.index package for indexing.
- Added: Addt'l methods to Vect2D, Vect2F for setting vector components.
- Added: Addt'l convenience methods to LoggingFactory.
- Added: Individual logging levels per logger.
- Added: a series of vector/line calculations. The Tuple* classes point to 
  these methods now for relevant calculations.
- Added: Reflect.getPublicFields(Object, boolean) for excluding static members.
- Changed: Reflect.getEnumInstance() is now public.
- Changed: Reflect.createForType(...) can now handle converting Enums to other 
  types.
- Added: AbstractTrie.clear().
- Added: HashedHashMap.containsValue(K, V).
- Changed: PairGroup now uses a pooled array of pairs instead creating many 
  pair objects over and over again.
- Changed: PairGroup.clear().