@@ -4,6 +4,9 @@ Slated for 2.31.0
 =================
 
 - Added: Matrix4X chaining commands and other commands.
+- Added: Interface Dumpable<T>: dumps contents to an array of a similar type T.
+- Added: AbstractMap functions toArrayKeys(K[]), toArrayValues(V[]): dumps 
+  keys/values to an array of a corresponding type.
 
 
 Changed in 2.30.2
